--- a/app/src/main/res/layout/activity_focus.xml
+++ b/app/src/main/res/layout/activity_focus.xml
@@ -7,16 +7,34 @@
     android:background="@color/white"
     tools:context=".FocusActivity">
 
-    <Button
-        android:id="@+id/start_pause"
+
+    <FrameLayout
+        android:id="@+id/frame_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Start"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chronometer" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintTop_toBottomOf="@+id/chronometer">
+
+
+        <Button
+            android:id="@+id/start_pause"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="Start"
+            tools:visibility="visible" />
+
+        <Button
+            android:id="@+id/focus_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            android:text="Done"
+            tools:visibility="invisible" />
+
+    </FrameLayout>
 
     <Button
         android:id="@+id/focus_reset"
@@ -26,7 +44,7 @@
         android:text="Reset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/start_pause" />
+        app:layout_constraintTop_toBottomOf="@+id/frame_layout" />
 
     <Chronometer
         android:id="@+id/chronometer"
@@ -36,7 +54,7 @@
         android:background="@drawable/cycle_background"
         android:gravity="center_vertical|center_horizontal"
         android:text="00:00:00"
-        android:textSize="35sp"
+        android:textSize="40sp"
         android:textColor="@color/pacific_blue"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
@@ -50,6 +68,7 @@
         android:layout_marginStart="372dp"
         android:layout_marginTop="4dp"
         android:background="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_close" />
