--- a/app/src/main/res/layout/temp_customcal_linear_item_day.xml
+++ b/app/src/main/res/layout/temp_customcal_linear_item_day.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/parent_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardCornerRadius="6dp"
+        app:cardCornerRadius="8dp"
         app:cardUseCompatPadding="true">
 
         <LinearLayout
