--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="400dp"
+    android:layout_height="wrap_content"
     android:backgroundTintMode="screen"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <LinearLayout
         android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
-        android:layout_height="320dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/profile_backgroud_grad_default"
         android:gravity="bottom"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:paddingLeft="15dp"
-        android:paddingTop="113dp"
-        android:paddingRight="15dp">
+        android:paddingTop="100dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.cardview.widget.CardView
             android:layout_width="90dp"
@@ -58,15 +63,6 @@
                 android:textColor="@color/white"
                 android:textSize="15dp" />
 
-            <Button
-                android:id="@+id/log_out"
-                style="?attr/materialButtonOutlinedStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/white"
-                android:text="LOG OUT"
-                app:icon="@drawable/ic_logout" />
-
         </LinearLayout>
 
     </LinearLayout>
@@ -78,7 +74,11 @@
         android:layout_gravity="center"
         android:orientation="horizontal"
         app:layout_anchor="@+id/linearLayout4"
-        app:layout_anchorGravity="bottom|center">
+        app:layout_anchorGravity="bottom|center"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">
 
         <com.google.android.material.card.MaterialCardView
             android:id="@+id/add_list_card"
@@ -99,7 +99,7 @@
                     android:layout_gravity="center"
                     android:layout_marginBottom="14dp"
                     android:background="@drawable/ic_add"
-                    android:backgroundTint="@color/colorPrimary"/>
+                    android:backgroundTint="@color/colorPrimary" />
 
                 <TextView
                     android:id="@+id/textView16"
@@ -134,14 +134,14 @@
                     android:layout_height="45dp"
                     android:layout_gravity="center"
                     android:layout_marginBottom="14dp"
-                    android:background="@drawable/ic_reports"
+                    android:background="@drawable/ic_settings"
                     android:backgroundTint="@color/colorPrimary" />
 
                 <TextView
                     android:id="@+id/textView15"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/menu_reports"
+                    android:text="@string/menu_settings"
                     android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textColor="@color/colorPrimary"
@@ -155,4 +155,4 @@
 
     </LinearLayout>
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
