--- a/app/src/main/res/menu/main_bottom_menu.xml
+++ b/app/src/main/res/menu/main_bottom_menu.xml
@@ -25,8 +25,8 @@
         android:title="@string/menu_location"/>
 
     <item
-        android:id="@+id/page_setting"
+        android:id="@+id/page_reports"
         android:enabled="true"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/menu_settings"/>
+        android:icon="@drawable/ic_reports"
+        android:title="@string/menu_reports"/>
 </menu>
