--- a/app/src/main/res/drawable/default_bottom_task_edit_cmpnt.xml
+++ b/app/src/main/res/drawable/default_bottom_task_edit_cmpnt.xml
@@ -6,7 +6,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorAccent"
+        android:color="?attr/textBoxBorder"
         android:dashWidth="10px"
         android:dashGap="0px" />
 
