--- a/app/src/main/res/drawable/new_event_spinner_design.xml
+++ b/app/src/main/res/drawable/new_event_spinner_design.xml
@@ -2,6 +2,6 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android" >
     <stroke android:color="@color/black" android:dashWidth="1dp" android:width="1dp"/>
-    <solid android:color="@color/white" />
+<!--    <solid android:color="@color/white" />-->
     <corners android:radius="10dp"/>
 </shape>
