--- a/app/src/main/res/layout/dialog_add_invitation_box.xml
+++ b/app/src/main/res/layout/dialog_add_invitation_box.xml
@@ -9,12 +9,12 @@
     <TextView
         android:id="@+id/new_list_title"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:layout_marginBottom="5dp"
-        android:background="@color/colorAccent"
+        android:background="?attr/dialogHeaderBgColor"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/add_invitation_title"
-        android:textColor="@color/new_list_title_textColor"
+        android:textColor="?attr/dialogHeaderColor"
         android:textSize="18sp"
         android:textStyle="bold" />
 
