--- a/app/src/main/res/layout/dialog_add_new_list.xml
+++ b/app/src/main/res/layout/dialog_add_new_list.xml
@@ -8,13 +8,13 @@
     <TextView
         android:id="@+id/new_list_title"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="55dp"
         android:layout_marginBottom="30dp"
-        android:background="@color/colorAccent"
+        android:background="?attr/dialogHeaderBgColor"
         android:gravity="center_vertical"
         android:text="@string/add_new_list_title"
         android:textAlignment="center"
-        android:textColor="@color/new_list_title_textColor"
+        android:textColor="?attr/dialogHeaderColor"
         android:textSize="18sp"
         android:textStyle="bold" />
 
