--- a/app/src/main/res/layout/fragment_reports.xml
+++ b/app/src/main/res/layout/fragment_reports.xml
@@ -21,7 +21,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/color_picker_mistyRose"
+                android:background="?attr/reportCompleteTask"
                 android:orientation="vertical"
                 android:padding="5dp">
 
@@ -56,7 +56,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/colorAccent"
+                android:background="?attr/reportPendingTask"
                 android:orientation="vertical"
                 android:layout_gravity="center_horizontal"
                 android:padding="5dp">
