--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -12,12 +12,13 @@
     <LinearLayout
         android:id="@+id/linearLayout4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/profile_backgroud_grad_default"
+        android:layout_height="250dp"
+        android:background="?attr/navHeaderBg"
         android:gravity="bottom"
+        android:maxHeight="250dp"
         android:orientation="vertical"
         android:paddingLeft="15dp"
-        android:paddingTop="100dp"
+        android:paddingTop="0dp"
         android:paddingRight="15dp"
         android:paddingBottom="15dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +54,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:text="User Name"
-                android:textColor="@color/white"
+                android:textColor="?attr/navHeaderFrColor"
+                android:textStyle="bold"
                 android:textSize="25dp" />
 
             <TextView
@@ -62,7 +64,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left"
                 android:text="User Email"
-                android:textColor="@color/white"
+                android:textColor="?attr/navHeaderFrColor"
+                android:textStyle="bold|italic"
                 android:textSize="15dp" />
 
         </LinearLayout>
@@ -101,7 +104,7 @@
                     android:layout_gravity="center"
                     android:layout_marginBottom="14dp"
                     android:background="@drawable/ic_add"
-                    android:backgroundTint="@color/colorPrimary" />
+                    android:backgroundTint="?attr/navHeaderBtnColor"  />
 
                 <TextView
                     android:id="@+id/textView16"
@@ -110,7 +113,7 @@
                     android:text="@string/menu_add_list"
                     android:textAlignment="center"
                     android:textAllCaps="true"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="?attr/navHeaderBtnColor"
                     android:textStyle="bold" />
 
 
@@ -137,7 +140,7 @@
                     android:layout_gravity="center"
                     android:layout_marginBottom="14dp"
                     android:background="@drawable/ic_settings"
-                    android:backgroundTint="@color/colorPrimary" />
+                    android:backgroundTint="?attr/navHeaderBtnColor" />
 
                 <TextView
                     android:id="@+id/textView15"
@@ -146,7 +149,7 @@
                     android:text="@string/menu_settings"
                     android:textAlignment="center"
                     android:textAllCaps="true"
-                    android:textColor="@color/colorPrimary"
+                    android:textColor="?attr/navHeaderBtnColor"
                     android:textStyle="bold" />
 
 
